feat: properly implement getCapability() for all exchange integrations
Comprehensive implementation of ExchangeCapability profiles for all supported exchanges:

Exchange-specific implementations:
- Binance: Full crypto spot & derivatives support with WebSocket streaming
- BinanceUs: Fixed identity (was incorrectly showing COINBASE), crypto trading for US clients
- Coinbase: Complete crypto spot & futures with authenticated streaming
- Bitfinex: New implementation for crypto margin trading & perpetuals
- Alpaca: New implementation for US equities/stocks with paper trading support
- Oanda: Fixed capabilities for forex & CFD with proper market coverage flags
- InteractiveBrokers: Multi-asset support (stocks, forex, derivatives) with polling
- ExchangeStreamConsumer: Fixed interface with default implementations for acceptTrades(), onConnected(), onDisconnected()

Key improvements:
- Accurate market coverage flags per exchange (crypto, forex, stocks, etc.)
- Proper trading mode support (live, paper, sandbox, margin, leverage)
- Correct order type support per exchange capabilities
- Streaming capability flags with authentication requirements
- API endpoint and WebSocket configuration
- Detailed capability notes explaining exchange-specific features

Testing: Build SUCCESS with all compilation errors resolved